# eqalert

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  config.json  docker-compose.yml  eqa_conf.json  eqalert.py  eqaparser.py  parse_test.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-test.yml  build.yml  codeql.yml  docker-build.yml  docker-publish.yml  poetry-build.yml  pypi-publish.yml  test.yml
docs/: CONTRIBUTING.md  README.md  SECURITY.md
eqa/: eqalert.py
eqa/const/: config_ability.py  config_char.py  config_chat_npc.py  config_chat_received.py  config_chat_sent.py  config_combat.py  config_command.py  config_emote.py  config_group.py  config_loot.py  config_other.py  config_pets.py  config_settings.py  config_spell_general.py  config_spell_specific.py  config_system.py  config_who.py  config_zones.py  data_spell_casters.py  data_spell_items.py  data_spell_lines.py
eqa/lib/: action.py  config.py  consts.py  curses.py  encounter.py  eqa_action.py  eqa_config.py  eqa_curses.py  eqa_keys.py  eqa_parser.py  eqa_sound.py  eqa_state.py  keys.py  log.py  parser.py  players.py  settings.py  sound.py  state.py  struct.py  timer.py  util.py  watch.py
eqa/models/: config.py  data.py  util.py
lib/: eqa_action.py  eqa_config.py  eqa_curses.py  eqa_keys.py  eqa_parser.py  eqa_settings.py  eqa_sound.py  eqa_state.py  eqa_struct.py
scripts/: install-playsound.sh  spells-to-json.py
tests/lib/: test_config.py
util/: spells-to-json.py
