[tool.poetry]
name = "eqalert"
version = "3.6.2"
description = "Configurable and Context Driven Project 1999 Log Parser"
authors = ["M Geitz <git@geitz.xyz>"]
license = "GPL2"
readme = "README.md"
packages  = [
    { include = "eqa" }
]

[tool.poetry.dependencies]
python = ">=3.9.2"
playsound = "~1.3.0"
gtts = "~2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[tool.poetry.scripts]
eqalert = 'eqa.eqalert:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
