[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name = eqalert
version = 1.1.0
author = Michael Geitz
author-email = git@geitz.xyz
home-page = https://github.com/mgeitz
decription = Parse and react to eqemu logs
license = GPL-2.0
license_files = LICENSE.txt
